# Labs

./: .gitignore
Laba 5.1/: main.cpp
Laba 5.2/: main.cpp
Laba10/: CMakeLists.txt  main.cpp
Laba10/inc/: Class.hpp
Laba10/src/: Provider.cpp  Subscriber.cpp
Laba7/: main.cpp
Laba7/inc/: Func.hpp
Laba7/src/: Func.cpp
Laba8/: CMakeLists.txt  main.cpp
Laba8/Laba8/: CMakeLists.txt  Laba8.h
Laba9/: CMakeLists.txt
Laba9/Laba9/: CMakeLists.txt  Laba9.cpp  Laba9.h
